# sabot

./: CMakeLists.txt  README.md  TODO.md  actions.cpp  actions.hpp  common.h  common.hpp  docs.doxy  kernel.cpp  kernel.hpp  machine.cpp  machine.hpp  managed_container.hpp  ms_container.hpp  quantum_system.hpp  sabot.cpp  string_buffer.hpp  universe.cpp  universe.hpp  utility.hpp
examples/: README.md  qrng.py  sdc.py  teleportation.py
language/: dialect.cpp  dialect.hpp  instruction.hpp  instruction_definition.hpp  interpreter.cpp  interpreter.hpp  program.hpp
language/dialects/: chpext.cpp  chpext.hpp  dialect_list.hpp
net/: request.hpp  response.hpp  server.cpp  server.hpp
randnum/: generator.cpp  generator.hpp
state/: chp_state.cpp  chp_state.hpp  quantum_state.hpp  state_type.cpp  state_type.hpp  state_type_list.hpp
test/: ms_container.cpp  sabot.cpp  string_buffer.cpp
test/randnum/: generator.cpp
